// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Link should render disabled 1`] = `
<a
  className="link link--disabled pointer-events--none"
  data-ui-component={true}
  disabled={true}
  href="http://google.com"
>
  Test Link
</a>
`;

exports[`components/Link should render onclick 1`] = `
<a
  className="link"
  data-ui-component={true}
  disabled={false}
  onClick={[MockFunction]}
>
  Test Link
</a>
`;

exports[`components/Link should render style classes 1`] = `
<a
  className="link link--muted"
  data-ui-component={true}
  disabled={false}
>
  Test Link
</a>
`;

exports[`components/Link should render target blank attribute 1`] = `
<a
  className="link"
  data-ui-component={true}
  disabled={false}
  href="http://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Test Link
</a>
`;
